# tiny-container-runtime

./: .gitignore  CMakeLists.txt  README.md  agent.md  todo.md
.github/workflows/: build.yml
docs/: container_manager.md  create_image.md  crun_config.md  dns_forwarder.md  image_manager.md  seccomp_resource.md  tcr_client.md  tcr_commands.md
experiments/: add-bind-mount.sh  add-nat-network.sh  add-tmp-mount.sh  agent.md  create-container.sh  create-image.sh  create-nat-network.sh  forward-port.sh  load-image.sh  remove-container.sh  remove-global.sh  remove-image.sh  run-container.sh
host_tools/: tcr-create-image.sh
src/: tcr.c  tcrd.c
src/app/: common.h  daemon-constants.h
src/common/: bitmap.c  bitmap.h  list.h  utils.c  utils.h
src/container/: container_manager.c  container_manager.h  crun_config.c  crun_config.h  run_config.c  run_config.h
src/image/: image_manager.c  image_manager.h
src/network/: dns_forwarder.c  dns_forwarder.h  nat_network.c  nat_network.h  nat_network_manager.c  nat_network_manager.h  nft_helper.c  nft_helper.h  port_forwarder.c  port_forwarder.h
src/resource/: CMakeLists.txt  seccomp.json  seccomp_json.h
src/rpc/: rpc_client.c  rpc_client.h  rpc_server.c  rpc_server.h
test/: CMakeLists.txt  pre-test-cleanup.sh  run_image_manager_test.sh  run_test.sh  run_test_container_manager.sh  run_test_crun_config.sh  run_test_nat_network.sh  run_test_nat_network_manager.sh  run_test_port_forwarder.sh  run_test_tcrd.sh  test_container_manager.c  test_crun_config.c  test_dns_forwarder.c  test_image_manager.c  test_nat_network.c  test_nat_network_manager.c  test_port_forwarder.c  test_rpc.c  test_run_config.c  test_seccomp_resource.c  test_tcr_client.c  test_util.h
tools/: run-config-schema.json  tcr-nuke.sh
